fixed timezone issue, added spacing for footer

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -62,4 +62,5 @@ body {
 }
 #footer {
   flex: 0 1 40px;
+  padding-left: 24px;
 }
